--- a/lib/vue-app/src/styles/settings.scss
+++ b/lib/vue-app/src/styles/settings.scss
@@ -35,7 +35,7 @@ div * {
 // General UI
 // ///////////////////////////////
 html,body {
-    font-family: Ember;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
 .page-content {
     padding: 25px 50px 25px 50px !important;
