--- a/lib/vue-app/src/styles/settings.scss
+++ b/lib/vue-app/src/styles/settings.scss
@@ -35,14 +35,14 @@ div * {
 // General UI
 // ///////////////////////////////
 html,body {
-    font-family: Ember;
+    font-family: Ember, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
 .page-content {
     padding: 25px 50px 25px 50px !important;
     margin: 0px;
 }
 .page-title {
-    font-family: Ember Light !important;
+    font-family: Ember Light, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif !important;
     font-size: 28px;
     text-align: center;
 }
@@ -167,7 +167,7 @@ html,body {
 .help-content h3 {
     margin-top: 25px;
     margin-bottom: 10px;
-    font-family: Ember Light;
+    font-family: Ember Light, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
 .help-content p {
     margin-top: 10px;
